welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: value foreach is not a member of Int
                                                          for (i<- nums.length-1){
                                                                              ^indexOfValue:3: error: not found: type i
                                                            if (nums[i]==lookigFor){
                                                                     ^indexOfValue:3: error: value nums of type Array[Int] does not take type parameters.
                                                            if (nums[i]==lookigFor){
                                                                    ^indexOfValue:3: error: not found: value lookigFor
                                                            if (nums[i]==lookigFor){
                                                                         ^