welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {var i :Int=0
                                                          for (i<- nums.length-1){
                                                            if (nums[i]==lookigFor){
                                                              return i
                                                            }
                                                          }
                                                         }